@@ -6,20 +6,12 @@
 #include "config.h"
 #endif
 
+#include "iround.h"
+
 #include <Mercator/DepthShader.h>
 
 #include <Mercator/Segment.h>
 #include <Mercator/Surface.h>
-
-#ifdef HAVE_LRINTF
-    #define I_ROUND(x) (::lrintf(x)) 
-#elif defined(HAVE_RINTF)
-    #define I_ROUND(x) ((int)::rintf(x)) 
-#elif defined(HAVE_RINT)
-    #define I_ROUND(x) ((int)::rint(x)) 
-#else
-    #define I_ROUND(x) ((int)(x)) 
-#endif
 
 #include <cmath>
 
